--- a/Fylo Data Storage Component | Challenger 03/style.css
+++ b/Fylo Data Storage Component | Challenger 03/style.css
@@ -43,7 +43,30 @@ body {
     margin-top: 30px;
 }
 
+.botao {
+    width: 50px;
+    height: 50px;
+    background-image: url('./images/icon-document.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 10px;
+    border: none;
+    background-color:  #0C122C;
+    margin-right: 10px;
+}
 
+.btn1 {
+    background-image: url('./images/icon-document.svg');
+}
+.btn2 {
+    background-image: url('./images/icon-folder.svg')
+}
+
+.btn3 {
+    background-image: url('./images/icon-upload.svg');
+}
+
+/*
 .icons img {
     width: 23px;
     height: 25px;
@@ -53,6 +76,8 @@ body {
     border: 15px solid #0C112C;
     margin-right: 10px;
 }
+
+*/
 
 .content {
     width: 540px;
