--- a/Coding Bootcamp Testimonials | Challenger 04/style.css
+++ b/Coding Bootcamp Testimonials | Challenger 04/style.css
@@ -4,18 +4,31 @@
 }
 
 .container {
+    overflow: hidden;
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
+    align-items:center;
+    padding: 50px;
 }
 
 .content {
-    width: 636px;
-    height: 286px;
-
+    width: 50%;
 }
+
+.content h1 {
+    width: auto;
+}
+
+.photo {
+    width: 540px;
+    height: 540px;
+}
+
+.photo img{
+    width:auto;
+    height: auto;
+}
+
 
 
 
