--- a/Challenger05_Base_Apparel_Coming_Soon/style.css
+++ b/Challenger05_Base_Apparel_Coming_Soon/style.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
     overflow: hidden;
-    
+    background-image: url('./images/bg-pattern-desktop.svg');
 }
 
 
