--- a/Challenger06_intro_component_with_signup_form/style.css
+++ b/Challenger06_intro_component_with_signup_form/style.css
@@ -31,14 +31,15 @@ body {
 }
 
 .form {
-    width: 55%;
+    max-width: 540px;
+    margin-right: 100px;
 }
 
 .try {
     width: 540px;
     height: 60px;
     border-radius: 10px;
-    box-shadow: 0px 10px 0px 1px rgba(0, 0, 0, 0.123);
+    box-shadow: 0px 10px 0px 0px rgba(0, 0, 0, 0.123);
     margin-bottom: 20px;
     background-color: hsl(248, 32%, 49%);
     color: #fff;
@@ -53,8 +54,98 @@ body {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 10px 0px 1px rgba(0, 0, 0, 0.123);
-    width: 540px;
-    height: 470px;
+    max-width: 540px;
+    height: 400px;
+    display: block;
+    padding: 40px 40px;
+    
+}
+
+.inputForm {
+    width: 100%;
+    height: 55px;
+    border: 1px solid rgba(214, 200, 200, 0.699);
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+
+.formSignUp input[type=text]{
+    padding-left: 5px;
+
+}
+
+.buttonSubmit {
+    width: 100%;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    background-color:hsl(154, 59%, 51%);
+    color: #fff;
+    font-weight: 700;
+    font-size: large;
+    box-shadow: 0px 3px 0px 0px hsl(154, 56%, 35%);
+}
+
+.formSignUp p{
+    font-size: 13px;
+    text-align: center;
+    margin-top: 15px;
+    color: hsl(246, 25%, 77%);
+}
+
+.formSignUp strong {
+    color: hsl(0, 100%, 74%);
+}
+
+@media(max-width: 720px){
+    .container {
+        display: inline-block;
+        width: 100%;
+
+    }
+
+    .content {
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+        padding: 0px;
+
+    }
+
+    .content h1 {
+        padding-top: 20px;
+        margin-top: 20px;
+    }
+
+
+
+    .content p {
+        padding: 0 20px 10px 20px ;
+    }
+
+    .form{
+        max-width: 100%;
+        margin: 0 20px 0 20px;
+        padding-bottom: 20px;
+    }
+
+    .try {
+        width: 100%;
+        margin-top: 20px;
+        
+    }
+
+    .try p{
+        padding: 0 10px 0 10px;
+        flex-wrap: wrap;
+        text-align: center;
+    }
+
+    .formSignUp {
+        padding: 20px 20px;
+        
+    }
 }
 
 
