--- a/Challenger08_preview_card_component/style.css
+++ b/Challenger08_preview_card_component/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    font-family: 'Inter', sans-serif;
     font-size: 15px;
     width: 100vw;
     height: 100vh;
@@ -30,15 +31,36 @@ body {
     height: 100%;
 }
 
+.textDiv h1 {
+    font-weight: 700;
+    font-size: 36px;
+}
+
+.textDiv h1, p {
+    color: hsl(0, 0%, 100%);
+}
+
 .textDiv p {
+    color: hsla(0, 0%, 100%, 0.75);;
     margin-top: 30px;
+    font-weight: 400;
+    line-height: 25px;
 }
 
 
 .status {
-    margin-top: 90px;
+    margin-top: 50px;
     display: flex;
     justify-content: space-between;
+}
+
+.data {
+    color:hsl(0, 0%, 100%)
+}
+
+.data spam {
+    font-size: 13px;
+    color: hsla(0, 0%, 100%, 0.6);
 }
 
 .imgDiv {
